--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,20 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
 
 :root {
   --tw-shadow-color: black;
 }
 
-/* ::-webkit-scrollbar {
-  display: none;
-}
-
-html {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-} */
 ::-webkit-scrollbar {
   width: 8px;
   height: 16px;
@@ -40,7 +31,9 @@ html {
   --c1: 
 }
 
-
+html {
+  @apply scroll-smooth;
+}
 body {
   @apply bg-black font-[14px];
   font-family: "Questrial", sans-serif;
