--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,6 +31,15 @@
   --c1: 
 }
 
+.noselect {
+  -webkit-touch-callout: none;  
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+}
+
 .cartoon-hero {
   background-image: url("/images/cartoon_bg.jpg")
 }
