--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,6 +40,12 @@
             user-select: none;
 }
 
+.text-stroke {
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-color: white;
+  -webkit-text-stroke-width: 0.5px
+}
+
 .cartoon-hero {
   background-image: url("/images/cartoon_bg.jpg")
 }
